--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -5,6 +5,9 @@
     </HEAD>
 
     <BODY>
-        Hello world!
+        <FORM method="POST" action="/input">
+            <INPUT type="text" name="username" placeholder="Username">
+            <BUTTON>Submit</BUTTON>
+        </FORM>
     </BODY>
 </HTML>
